tests/semantic/valid/09_const_relations.tc
// 测试9: 常量关系运算
// 目标：验证 < > <= >= == != 编译期求值
const int X = 5;
const int Y = 10;
const int C1 = X < Y;    // 1
const int C2 = X > Y;    // 0
const int C3 = X <= Y;   // 1
const int C4 = X >= Y;   // 0
const int C5 = X == Y;   // 0
const int C6 = X != Y;   // 1

int main(void) {
    return C1 + C2 + C3 + C4 + C5 + C6;  // 1+0+1+0+0+1 = 3
}
